welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: not found: value compteur1
 compteur1 = 0
 ^Methods:4: error: not found: value compteur2
 compteur2 = 0
 ^Methods:6: error: not found: value compteur1
 	compteur1 = compteur1 + 1
        ^Methods:10: error: not found: value compteur1
 while (compteur1 != compteur2){
        ^Methods:11: error: not found: value compteur2
 	compteur2 = compteur2 + 1
        ^