welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
 compteur1 = 0
 compteur2 = 0
 while (!estSurBiscuit()){
 	compteur1 = compteur1 + 1
 	avance();
 }
 prendBiscuit();
 while (compteur1 != compteur2){
 	compteur2 = compteur2 + 1
 	recule();
 }
 
}
